# super-shaper-9000

./: .gitignore  .prettierignore  .prettierrc.cjs  Cargo.toml  Dockerfile  GEMINI.md  apply_changes.py  apply_patch.py  bridge.sh  c.sh  concat.config  eslint.config.js  flake.nix  index.html  package.json  playwright.config.ts  render.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  web-test-runner.config.js
.cargo/: config.toml
.nix-bins/: google-chrome
src/: main.ts  vite-env.d.ts
src/assets/fixtures/s3dx/: 6_1_ Rounded Pin.s3dx  FISH.s3dx  TomoLike.s3dx  WitcherDaily.s3dx  gh-60-winged-swallow.s3dx  wildcat-fixed-winged-pin.s3dx
src/components/3d/: board-viewport.test.ts  board-viewport.ts
src/components/3d/builders/: AnnotationBuilder.ts  CurvatureBuilder.ts  FinBuilder.ts  GizmoBuilder.ts
src/components/3d/managers/: InteractionManager.ts  SceneManager.ts  TextureManager.ts
src/components/layouts/: AppLayout.ts  app-shell.ts
src/components/pages/: board-builder-page.logic.test.ts  board-builder-page.logic.ts  board-builder-page.ts
src/components/ui/: board-controls.test.ts  board-controls.ts  node-inspector.ts  notion-button.ts  notion-input.ts
src/lib/client/: LocationService.ts  clientLog.ts  reactive-sam-controller.ts  router.ts  runtime.ts  sam-controller.ts  wasm-sam-controller.test.ts  wasm-sam-controller.ts
src/lib/client/geometry/: board-curves.test.ts  board-curves.ts  manual-baker.test.ts  manual-baker.ts  mesh-generator.test.ts  mesh-generator.ts  s3dx-exporter.test.ts  s3dx-exporter.ts  s3dx-importer.test.ts  s3dx-importer.ts
src/server/: compute.test.ts  context.ts  index.ts
src/server/assets/: board-generator.gh
src/server/middleware/: effect-plugin.ts
src/server/services/: rhino-compute.ts
src/styles/: index.css
surfer-core/: Cargo.toml
surfer-core/src/: bezier.rs  geometry.rs  lib.rs  mesh.rs  model.rs  reducer.rs
surfer-mobile/: Cargo.toml  build.rs
surfer-mobile/src/: lib.rs
surfer-wasm/: Cargo.toml
surfer-wasm/src/: lib.rs
tests/e2e/: board-builder.spec.ts  board-builder.test.ts  board-viewport.spec.ts  quad-viewport.spec.ts
tests/e2e/utils/: base-test.ts
(+2 files in other folders)
