[package]
name = "surfer-mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
surfer-core = { path = "../surfer-core" }
uniffi = "0.27"

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }
[package]
name = "surfer-mobile"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "surfer_mobile"

[dependencies]
surfer-core = { path = "../surfer-core" }
uniffi = "0.27.1"
serde_json = "1.0"
