[package]
name = "surfer-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
surfer-core = { path = "../surfer-core" }
wasm-bindgen = "0.2"
tsify = { version = "0.4", features = ["js"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = "0.1"
